<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:textColor="@color/colorButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DashboardActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Hey "
        android:id="@+id/userNameTextView"
        android:layout_centerHorizontal="true"/>

    <EditText android:id="@+id/inputSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_activities"
        android:inputType="textVisiblePassword"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:textColor="@color/cardview_shadow_start_color"
        android:layout_below="@+id/userNameTextView"
        android:layout_alignParentEnd="true"
        tools:ignore="PrivateResource">
    </ListView>


</RelativeLayout>