...
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/submitNameButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="54dp"
...
